--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 		<div class="page-header">
 			<p class="lead"><h3>IT在线课程 零基础到架构管理师</h3></p>
 		</div>
+		<div class="">
+			<p class="lead"><h4>GitHub: <a href="s">http://github.com/xianglesong/</a></h4></p>
+		</div>
 		<h3 style="text-align:center;font-weight: bold;border-bottom: 0px solid #E0E0E0;padding-bottom: 1px;">课程目录</h3>
 		<div class="table-responsive">
 			<table class="table table-striped table-hover table-bordered">
