--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/hlwxx.css">
 <script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js" charset="UTF-8"></script>
+<style type="text/css">
+a#bible {
+    color: red;
+}
+</style>
 <title>享乐颂</title>
 </head>
 <body>
@@ -37,15 +42,21 @@
 			<p class="lead"><h3>IT在线课程 零基础到架构管理师</h3></p>
 		</div>
 		<div class="">
-			<p class="lead"><h4>GitHub: <a href="s">http://github.com/xianglesong/</a></h4></p>
+			<p class="lead"><h4>GitHub: <a href="http://github.com/xianglesong">http://github.com/xianglesong</a></h4></p>
 		</div>
 		<h3 style="text-align:center;font-weight: bold;border-bottom: 0px solid #E0E0E0;padding-bottom: 1px;">课程目录</h3>
+		
+		<a style="text-align:center;font-weight: bold;border-bottom: 0px solid #E0E0E0;padding-bottom: 1px;" href="http://study.163.com/course/courseMain.htm?courseId=1005801006"></a>
+	
+
 		<div class="table-responsive">
 			<table class="table table-striped table-hover table-bordered">
-				<tr><th>网易云课堂</th><th>淘宝</th><tr>
-				<tr><td><a href="http://study.163.com/u/xianglesong">网易云课堂地址</a></td><td><a href="https://xianglesong.taobao.com/">淘宝网络课堂地址</a></td></tr>
+				<tr><th><font size="4">网易云课堂</font></th><th><font size="4">淘宝</font></th><tr>
+				<tr><td><a href="http://study.163.com/u/xianglesong"><font size="4">网易云课堂地址</font></a></td><td><a href="https://xianglesong.taobao.com/"><font size="4">淘宝网络课堂地址</font></a></div></td></tr>
 
 				<tr><td></td><td></td></tr>
+				<tr><td><a href="http://study.163.com/course/courseMain.htm?courseId=1005801006" id="bible">[推荐]Java宝典--实战及解析</a></td><td></a></td></tr>
+
 
 				<tr><td><a href="http://study.163.com/course/courseMain.htm?courseId=1003149011">Java日志实战及解析</a></td><td><a href="https://item.taobao.com/item.htm?spm=a1z10.1-c.w4004-11897994995.6.3aSqft&id=546431281472">Java日志实战及解析</a></td></tr>
 				<tr><td><a href="http://study.163.com/course/courseMain.htm?courseId=1003672033">RabbitMQ消息中间件实战</a></td><td><a href="https://item.taobao.com/item.htm?spm=a1z10.1-c.w4004-11897994995.2.dir7S4&id=545857189062">RabbitMQ消息中间件实战</a></td></tr>
